Get basic wifi example working

--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -13,3 +13,9 @@ platform = espressif32
 board = esp32thing
 framework = arduino
 src_filter = +<blink/>
+
+[env:simple-wifi]
+platform = espressif32
+board = esp32thing
+framework = arduino
+src_filter = +<simple-wifi/>
