Get basic IMU example working

--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -19,3 +19,10 @@ platform = espressif32
 board = esp32thing
 framework = arduino
 src_filter = +<simple-wifi/>
+
+[env:imu]
+platform = espressif32
+board = esp32thing
+framework = arduino
+src_filter = +<imu/>
+lib_deps = 944
