Implement websocket client!

--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -20,6 +20,13 @@ board = esp32thing
 framework = arduino
 src_filter = +<simple-wifi/>
 
+[env:wifi-websockets]
+platform = espressif32
+board = esp32thing
+framework = arduino
+src_filter = +<wifi-websockets/>
+lib_deps = 549
+
 [env:imu]
 platform = espressif32
 board = esp32thing
