Get Neopixels working!

--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -33,3 +33,12 @@ board = esp32thing
 framework = arduino
 src_filter = +<imu/>
 lib_deps = 944
+
+[env:scrum-tracker]
+platform = espressif32
+board = esp32thing
+framework = arduino
+src_filter = +<scrum-tracker/>
+lib_deps = 
+  549
+  28
