Clean up wifi stuff

--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -39,6 +39,7 @@ platform = espressif32
 board = esp32thing
 framework = arduino
 src_filter = +<scrum-tracker/>
+build_flags = -DWIFI_SSID='"ssid"' -DWIFI_PWD='"password"' -DSERVER='"cedaaba93267813e142c416cb4fe89f8.resindevice.io"'
 lib_deps =
   549
   28
