--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+[platformio]
+home_dir=./platformio
+
 [env:blink]
 platform = espressif32
 board = esp32thing
